# geimskell

./: .gitignore  Camera.hs  ChangeLog.md  Enemy.hs  Geimskell.hs  Geometry.hs  Makefile  README.org  Random.hs  Reactive.hs  Shoot.hs  Sound.hs  Spaceship.hs  Stage.hs  Testing.hs  TileSet.hs  UnitTests.hs  geimskell.cabal  main.hs  osc_receive.csd  osc_send.csd  shell.nix  spaceshooter.cabal  spaceshooter.hs  start-tiled
Geimskell/: Options.hs  Render.hs  Sound.hs  WorldState.hs
assets/audio/: README.org  osc_receive.csd  patternizer.udo  sampler.udo
assets/graphics/stage/: Raumschiff.xcf  tileset.xcf
assets/stages/: stage.tmx
assets/tilesets/: space.tsx
exec/: main.hs
nix/: geimskell.nix  overrides.nix  release.nix
nix/htiled/: default.nix
nix/lrucache/: default.nix
nix/sdl2-compositor/: default.nix
tests/: UnitTests.hs
