name:                geimskell
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Sebastian Jordan
maintainer:          sebastian.jordan.mail@googlemail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable geimskell
  main-is:             main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , sdl2-compositor
                     , reactive-banana
                     , sdl2
                     , linear
                     , text
                     , lens
                     , deepseq
                     , mtl
                     , random
                     , transformers
                     , csound-expression
                     , QuickCheck
                     , process
                     , stm
                     , hosc
  -- hs-source-dirs:
  default-language:    Haskell2010

test-suite unittests
  type: exitcode-stdio-1.0
  build-depends: base
               , QuickCheck
  default-language: Haskell2010
  main-is: UnitTests.hs
