name:                geimskell
version:             0.1.0.0
-- synopsis:
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Sebastian Jordan
maintainer:          sebastian.jordan.mail@googlemail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-files:
           assets/audio/*.udo
         , assets/audio/*.csd
         , assets/graphics/*.png
         , assets/graphics/stage/*.bmp
         , assets/stages/*.tmx
         , assets/tilesets/*.tsx

library
  exposed-modules: Reactive
                 , Geimskell
                 , TileSet
                 , Stage
                 , Sound
                 , Camera
                 , Geometry
                 , Spaceship
                 , Enemy
                 , Random
                 , Shoot
                 , Paths_geimskell
  build-depends:       base
                     , array
                     , containers
                     , csound-expression
                     , deepseq
                     , directory
                     , hosc
                     , htiled
                     , lens
                     , linear
                     , mtl
                     , prelude-safeenum
                     , process
                     , QuickCheck
                     , random
                     , reactive-banana
                     , sdl2
                     , sdl2-compositor
                     , sdl2-image
                     , StateVar
                     , stm
                     , text
                     , transformers
                     , vector
  -- hs-source-dirs:
  default-language:    Haskell2010

executable geimskell
  default-language:    Haskell2010
  main-is:             main.hs
  build-depends:       base
                     , geimskell
  hs-source-dirs:      exec

test-suite unittests
  type: exitcode-stdio-1.0
  build-depends: base
               , QuickCheck
               , hspec
               , geimskell
               , htiled
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is: UnitTests.hs

